# axvmconfig

./: Cargo.toml  README_CN.md  arceos-x86_64.toml  crates.js  help.html  index.html  search-index.js  settings.html  src-files.js
.github/: config.json
.github/workflows/: check.yml
axvmconfig/: all.html  enum.EmulatedDeviceType.html  enum.VMInterruptMode.html  enum.VMType.html  enum.VmMemMappingType.html  index.html  sidebar-items.js  struct.AxVMCrateConfig.html  struct.EmulatedDeviceConfig.html  struct.PassThroughDeviceConfig.html  struct.VMBaseConfig.html  struct.VMDevicesConfig.html  struct.VMKernelConfig.html  struct.VmMemConfig.html
scripts/: check.sh  test.sh
search.desc/axvmconfig/: axvmconfig-desc-0-.js
search.index/: 13686011665e.js  1affd353be5c.js  1fe7768409b0.js  22d10ca2bc6e.js  3b856c3d2658.js  58713fbf6242.js  5db9926fb37a.js  6286a0774ffa.js  6836e623adf1.js  6ad9735a6a12.js  6f8d91baf873.js  root.js
search.index/crateNames/: 887fc3345a4d.js
search.index/desc/: d809e5491105.js
search.index/entry/: a367b96e8950.js
search.index/function/: f0695cd9a656.js
search.index/generic_inverted_index/: 94eaf58ad120.js
search.index/name/: b6d2c7d144da.js
search.index/normalizedName/: 0c1ab50dcac6.js
search.index/path/: c9541bbbf2a3.js
search.index/type/: 19f7c997aa4e.js
src/: lib.rs  main.rs  templates.rs  test.rs  tool.rs
src/axvmconfig/: lib.rs.html
tests/: test.rs
trait.impl/core/clone/: trait.Clone.js
trait.impl/core/cmp/: trait.Eq.js  trait.PartialEq.js
trait.impl/enumerable/: trait.Enumerable.js
(+17 files in other folders)
