[package]
authors = [
  "Keyang Hu <keyang.hu@qq.com>",
  "Mingxian Su <aarkegz@gmail.com>",
] 
description = "A simple VM configuration tool for ArceOS-Hypervisor." 
edition = "2021" 
homepage = "https://github.com/arceos-hypervisor/axvmconfig" 
keywords = ["axvisor", "config", "toml"] 
license = "GPL-3.0-or-later OR Apache-2.0 OR MulanPSL-2.0" # MulanPubL2 is not included in SPDX
name = "axvmconfig" 
version = "0.1.0" 

[features]
default = ["std"]
std = ["dep:clap", "dep:env_logger", "dep:schemars"]

[lib]
name = "axvmconfig"
path = "src/lib.rs"

[[bin]]
name = "axvmconfig"
path = "src/main.rs"

[dependencies]
axerrno = "0.2.0"
clap = {version = "4.5.23", optional = true, features = ["derive"]}
enumerable = {version = "1.2", default-features = false}
env_logger = {version = "0.11.3", optional = true}
log = "0.4.21"
schemars = {version = "1.1.0", optional = true}
serde = {version = "1.0.204", default-features = false, features = ["derive"]}
serde_repr = "0.1"
toml = {version = "0.9.5", default-features = false, features = ["serde", "parse", "display"]}
